# server/pb/transaction_status_db.validator.pb.go
@@ -17,19 +17,6 @@ var _ = proto.Marshal
 var _ = fmt.Errorf
 var _ = math.Inf
 
-func (this *Templates) Validate() error {
-	if this.CreatedDt != nil {
-		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.CreatedDt); err != nil {
-			return github_com_mwitkow_go_proto_validators.FieldError("CreatedDt", err)
-		}
-	}
-	if this.UpdatedDt != nil {
-		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.UpdatedDt); err != nil {
-			return github_com_mwitkow_go_proto_validators.FieldError("UpdatedDt", err)
-		}
-	}
-	return nil
-}
 func (this *JobTransactionStatusPending) Validate() error {
 	if this.CreatedAt != nil {
 		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.CreatedAt); err != nil {
